--- a/index.html
+++ b/index.html
@@ -3,13 +3,129 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DevJane Portfolio Website</title>
+        <link rel="stylesheet" href="style.css">
+        <title>Brandon-Lee Newman Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
-
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+       
     </head>
     <body>
+        <header>
+            <div class="logo">
+                <img src="images/Brandon-Logo.jpg" alt="">
+            </div>
+            <button class="nav-toggle" aria-label="toggle-navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                 Hi, I am <strong>Brandon-Lee Newman</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">Aspiring Front-End Developer</p>
+            <img src="images/Brandon.jpg" alt="a picture of Brandon-Lee smiling" class="intro__img">
+        </section>
+
+
+        <!--My services-->
+        <section class="my-services" id="services">
+            <h2 class="section__title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Botany</h3>
+                    <p>I enjoy spending time in the outdoors, through hiking and gardening; familiarizing myself with terrestrial and marine fauna and flora of my immediate surroundings. I find beauty within all phyta, be it endemic, invasive, medicinal or ornamental.</p>
+                </div> <!-- / services -->
+
+                <div class="service">
+                    <h3>Food and Beverages</h3>
+                    <p> I believe food and beverages bring people together, which is why I enjoy participating in gastronomical activities such as food and wine tastings. You have to taste a culture in order to understand it; with this, I can be seated in the sun-kissed Spanish coast of Cadiz, indulging in Manzanilla sherry whilst in my armchair in my Cape Town abode. </p>
+                </div> <!-- / services -->
+
+                <div class="service">
+                    <h3>Fragrances</h3>
+                    <p>I am an avid collector of niche fragrances, especially fresh, aquatic, earthy and ozonic scents. They have the power to evoke, captivate and induce nostalgic vistas deep into one's past. I believe it helps one feel good and confident.</p>
+                </div> <!-- / services -->
+            </div> <!-- / services -->
+
+            <a href="#work" class="btn">My Work</a>
+        </section>
+
+        <!-- About me -->
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">Aspiring Cape Town-based Software Developer</p>
+
+            <div class="about-me__body">
+                <p>I try and strike a balance between my personal life and my prospective career in programming, seen in the juxtaposition between the indoor and somewhat solitary lifestyle associated with coding, and my outdoor, active lifestyle. </p>
+                <p>I aim to make a difference across multiple aspects of my life, holistically. However, I believe that I am a work in progress...</p>
+            </div>
+
+            <img src="images/WIP Shop.jpeg" alt="" class="about-me__image">
+        </section>
+
+        <!-- My work -->
+        <section class="my-work" id="work">
+            <h2 class="section__title section__title--work">My work</h2>
+            <p class="section__subtitle section__subtitle--work"></p>
+
+            <div class="Portfolio">
+                <!-- portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/photo-1628498188904-036f5e25e93e.jpeg"  alt="" class="portfolio__image">
+                </a>
+
+                <!-- portfolio item 02 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/best-hikes-on-table-mountain-in-cape-town-header-800x480.jpg" alt="" class="portfolio__image">
+                </a>
+
+                <!-- portfolio item 03 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/wine-tasting-013120_1200x.jpg" alt="" class="portfolio__image">
+                </a>
+
+                <!-- portfolio item 04 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/GettyImages-846037086.jpg" alt="" class="portfolio__image">
+                </a>
+
+                <!-- portfolio item 05 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/2022_October_EDP_SecVisualCGI_BleuByzantin-1_Square.jpeg" alt="" class="portfolio__image">
+                </a>
+
+                <!-- portfolio item 06 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/Flavor Fragrances.jpg" alt="" class="portfolio__image">
+                </a>
+            </div>
+        </section>
+
+        <!-- footer -->
+        <footer class="footer">
+            <a href="mailto:bdupreez017@gmail.com" class="footer__link">bdupreez017@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/brandon-lee-newman-873694249/">LinkedIn</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io/Brandon-Lee017">Codepen</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://github.com/Brandon-Lee017">Github</a></li>
+            </ul>
+        </footer>
+
+
+        <script src="index.js"></script>
         
     </body>
 </html>
