--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -32,17 +32,17 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-             The title <strong>of my project</strong>
+             A<strong>glimpse</strong> into who I am 
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Project subtitle</p>
-            <img src="images/Brandon.jpg" alt="a picture of Brandon-Lee smiling" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">Trying to become better</p>
+            <img src="images/Brandon.jpg" alt="a picture of Brandon-Lee smiling" class="portfolio-intro__img">
         </section>
 
         <div class="portfolio-item-individual">
             <p>A fundamental part of my interests are based on the world in which I live, and the natural substances and compounds therein, used in foods and medicine, as I aim to eventually study towards a career in pharmacy or food chemistry.</p>
-            <img src="images/Flavor Fragrances.jpg" alt="">
+                <img src="images/Flavor Fragrances.jpg" alt="" class="portfolio-item-individual__interests">
             <p>I aim to expand my knowledge in coding to the furthest extent possible, and acquire additional proficiency in other programmes such as R or Python.</p>
-            <p>My goal is to solve real-life problems to programming and computational approaches through my interests in food and pharmacy</p>
+            <p>My goal is to solve real-life problems to programming and computational approaches through my interests in food and pharmacy.</p>
         </div>
 
         <!-- footer -->
