--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -34,7 +34,7 @@
             <h1 class="section__title section__title--intro">
              A<strong>glimpse</strong> into who I am 
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Trying to become better</p>
+            <p class="section__subtitle section__subtitle--intro">Becoming better</p>
             <img src="images/Brandon.jpg" alt="a picture of Brandon-Lee smiling" class="portfolio-intro__img">
         </section>
 
